# nanoscale

./: .gitattributes  .gitignore  DESIGN.md  README.md  ROADMAP.md  pyproject.toml
analysis/tokenizer_study/: report.txt  results.json
artifacts/: tokenizer_fineweb_16384.json
configs/: base.yaml  cpu_smoke.yaml
configs/corpora/: fineweb_edu.yaml
experiments/runs/cpu_smoke-baseline_20260721-165234_f35dea/: environment.json  metrics.jsonl  resolved_config.yaml  summary.json
experiments/runs/cpu_smoke-no_qknorm_20260721-165514_682ce3/: environment.json  metrics.jsonl  resolved_config.yaml  summary.json
experiments/runs/cpu_smoke-no_rmsnorm_20260721-165354_30ea44/: environment.json  metrics.jsonl  resolved_config.yaml  summary.json
experiments/runs/cpu_smoke-no_rope_20260721-165318_07ffb4/: environment.json  metrics.jsonl  resolved_config.yaml  summary.json
experiments/runs/cpu_smoke-no_swiglu_20260721-165432_243cef/: environment.json  metrics.jsonl  resolved_config.yaml  summary.json
nanoscale/: __init__.py  analysis.py  config.py  corpora.py  data.py  eval.py  experiments.py  model.py  planning.py  report.py  tokenizer.py  train.py
scripts/: __init__.py  fetch_sample.py  generate.py  make_report.py  make_table.py  modal_run.py  plan_study.py  prepare_data.py  run_ablation.py  run_study.py  tokenizer_study.py
tests/: conftest.py  test_ablation.py  test_analysis.py  test_config.py  test_data.py  test_data_protocol.py  test_experiments.py  test_model.py  test_planning.py  test_study_runner.py  test_tokenizer.py  test_tokenizer_study.py  test_train.py
(+18 files in other folders)
