[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoscale"
version = "0.1.0"
description = "A from-scratch LM study of whether tiny-model experiments predict large-model recipe choices."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexandros Kalyvas" }]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "matplotlib>=3.7"]

[project.scripts]
nanoscale-train = "nanoscale.train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanoscale*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
